[package]
name = "ssh-sign-fido2"
version = "0.1.0"
edition = "2021"

[dependencies]
authenticator = { version = "0.4.0-alpha.22", default-features = false, features = ["crypto_openssl"] }
base64 = "0.21.3"
byteorder = "1.4.3"
clap = { version = "4.4.2", features = ["derive"] }
hex = "0.4.3"
nom = "7"
pem = "3.0.2"
pinentry = "0.5.0"
rand = "0.8.5"
secrecy = "0.8.0"
sha2 = "0.10.7"
